--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
         />
+        <link
+            rel="shortcut icon"
+            href="./src/assets/favicon.ico"
+            type="image/x-icon"
+        />
         <script
             type="module"
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -26,7 +31,7 @@
             nomodule
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
         ></script>
-        <title>Vite App</title>
+        <title>Emanuel Martins | Portfólio</title>
     </head>
     <body>
         <div id="root"></div>
