--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Desenvolvedor FullStack, Emanuel Martins. Desenvolvedor de aplicações web com HTML, CSS, Javascript, React e Python. Aqui disponibilizo projetos e links para contato">
         <link rel="icon" type="image/svg+xml" href="./src/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
