feat: add metatag keywords IE=edge compatibility and author name

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Desenvolvedor FullStack, Emanuel Martins. Desenvolvedor de aplicações web com HTML, CSS, Javascript, React e Python. Aqui disponibilizo projetos e links para contato">
+        <meta name="description" content="Desenvolvedor FullStack, Emanuel Martins. Desenvolvedor de aplicações web com HTML, CSS, Javascript, React e Python. Aqui disponibilizo projetos e links para contato" />
+        <meta name="keywords" content="Programador, Desenvolvedor, Front-end, Back-end, Fullstack, Emanuel Zago Martins, Web"/>
+        <meta name="author" content="Emanuel Z. Martins">
         <link rel="icon" type="image/svg+xml" href="./src/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
